fix: Adding patch to update status of pedido
